# sculpt-lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install  rust-toolchain.toml
.github/workflows/: linux.yml
docs/bugs/: adaptive-symmetry-and-safety-validation-could-stall-a-frame.md  adaptive-topology-crashes-during-draw.md  fixed-adaptive-edit-cap-could-deform-unsupported-mesh.md  fly-look-horizontal-direction-inverted.md  large-stl-import-freezes-window.md  small-adaptive-brush-stalls-and-spikes.md  tiny-adaptive-brush-remains-sluggish.md  tool-panel-grows-across-frames.md
packaging/appimage/: AppRun  build-appimage.sh
packaging/linux/: app.sculptlite.editor.desktop  app.sculptlite.editor.metainfo.xml  smoke-x11.sh
packaging/rpm/: Containerfile  build-rpm.sh  sculpt-lite.spec
src/: app.rs  camera.rs  history.rs  main.rs  mesh.rs  renderer.rs  sculpt.rs  shader.wgsl  stl.rs  stroke.rs  voxel_remesh.rs
