[package]
name = "sculpt-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"] }
egui-wgpu = { version = "0.35", features = ["winit"] }
env_logger = "0.11"
glam = { version = "0.33", features = ["bytemuck"] }
rfd = "0.17"
stl_io = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
